--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             Venue
           </a>
           <a class="navbar-item" href="#faq">
-            FAQ
+            Details
           </a>
         </div>
 
@@ -110,13 +110,14 @@
                 <article>
                   <h4 class="heading is-size-3 has-text-centered lower-heading">The Bride and Groom</h4>
 
-                  <p>Sadhana and Jacky were supposed to have first met in primary school. Unfortunately, a few months prior to Jacky starting in what would have been the same year and class, Sadhana had left with her family to America.</p>
+                  <p>Sadhana and Jacky were supposed to have first met in primary school. Unfortunately, a few months prior to Jacky starting in what would have been the same year and class, Sadhana had left with her family to America.
+                  </p>
                   <br/>
 
-                  <p>The destiny of love could not be stopped however, as fate bought her back to Auckland to attend the same highschool a few years later. Destiny gave their love a second chance to blossom; it could not be stopped... except by akward teenage social behavior. Sadhana and Jacky went through 5 years of high school together, sharing classes and having mutual friends, but barely exchanging any words. </p>
+                  <p>The destiny of love could not be stopped however, as fate brought her back to Auckland to attend the same high school a few years later. Destiny gave their love a second chance to blossom; it could not be stopped ... except by awkward teenage social behaviour. Sadhana and Jacky went through five years of high school together, sharing classes and having mutual friends, but barely exchanging any words.</p>
                   <br/>
 
-                  <p>This seemed like a difficult case for Cupid to tackle, but the god of love did not give up. It waited until university to strike the couple with true love's arrow. It was during this often stressful and trying time as students that they were able to find and support each other, allowing a loving bond to bloom. Since then they have continued to support each other through good times and bad times. Now they are ready to take the next step and get hitched!</p>
+                  <p>This seemed like a difficult case for Cupid to tackle, but the God of Love did not give up! It waited until university to strike the couple with true love's arrow. It was during this often stressful and trying time as students that they were able to find and support each other, allowing a loving bond to bloom. Since then they have continued to support each other through good times and bad times. Now they are ready to take the next step and get hitched!</p>
                 </article>
               </div>
             </div>
@@ -141,7 +142,7 @@
               <h3 class="heading main-heading is-size-3">Venue</h3>
               <p class="is-size-5"><strong>Saturday, 31st August 2019</strong></p>
               <p class="is-size-5">Sorrento in the Park, Cornwall Park. 670 Manukau Rd, Royal Oak, Auckland NZ. </p>
-              <p class="is-size-5"> Please be seated for the ceremony by <strong>03.15pm</strong>.</p>
+              <p class="is-size-5"> Please be seated for the ceremony by <strong>3:15pm</strong>.</p>
               <p class="is-size-5">Reception to follow after.</p>
 
               <div class="iframe-container">
@@ -172,11 +173,25 @@
                   </div>
                 </div>
                 <div class="field">
-                  <label class="label">Number of Partners/Children:</label>
+                  <label class="label">Name of Partner (if applicable):</label>
                   <div class="control">
-                    <input class="input" type="number" id="guests" name="guests" />
+                    <input class="input" type="text" id="partner" name="partner" placeholder="e.g. Ginny Weasley" />
                   </div>
                 </div>
+                <div class="field">
+                  <label class="label">Number of children and their ages (if applicable):</label>
+                  <div class="control">
+                    <textarea class="textarea has-fixed-size" id="children" name="children"></textarea>
+                  </div>
+                </div>
+
+                <div class="field">
+                  <label class="label">"Do you or your partner/family members have any dietary requirements or allergies?</label>
+                  <div class="control">
+                    <textarea class="textarea has-fixed-size" id="food" name="food"></textarea>
+                  </div>
+                </div>
+
                 <div class="field">
                   <label class="label">Would you like to share any pearls of wisdom for the soon-to-be newlyweds?</label>
                   <div class="control">
@@ -184,9 +199,15 @@
                   </div>
                 </div>
                 <div class="field">
-                  <label class="label">What's your favourite part during weddings?</label>
+                  <label class="label">What do you enjoy the most about weddings?</label>
                   <div class="control">
                     <textarea class="textarea has-fixed-size" id="favourite" name="favourite" placeholder="e.g. The food..."></textarea>
+                  </div>
+                </div>
+                <div class="field">
+                  <label class="label">Anything else?</label>
+                  <div class="control">
+                    <textarea class="textarea has-fixed-size" id="additional" name="additional" placeholder="e.g. Please send us a list of the invitees."></textarea>
                   </div>
                 </div>
                 <div class="field">
@@ -211,54 +232,50 @@
         <div class="columns">
           <div class="column is-8-desktop is-offset-2-desktop">
             <div class="content">
-              <h3 class="heading main-heading">FAQ</h3>
+              <h3 class="heading main-heading">Details</h3>
               <ul>
                 <li><strong>Where is the ceremony? </strong> </li>
                 <p>
                   <a href="#venue">Sorrento in the Park</a>: Cornwall Park. 670 Manukau Rd, Royal Oak, Auckland NZ.
                 </p>
                 <li><strong>Where is the reception? </strong></li>
-                <p><a href="#venue"><span>Same venue as ceremony: Sorrento in the Park.</span></a></p>
+                <p>Same venue as ceremony: <a href="#venue"><span>Sorrento in the Park.</span></a></p>
 
                 <li><strong>What time should I arrive? </strong></li>
-                <p>Please be seated for the ceremony by 03.15pm.</p>
+                <p>Please be seated for the ceremony by 3:15pm.</p>
 
-                <li> <strong>Do I have to mail back my RSVP or can I RSVP online?</strong></li>
+                <li> <strong>How can I RSVP?</strong></li>
                 <p>Please use the <a href="#rsvp">RSVP form on this website</a>, or email us at <a href="mailto:rsvp@jackyandsadhana.com?subject=RSVP">rsvp@jackyandsadhana.com</a></p>
 
                 <li> <strong>When should I RSVP by?</strong> </li>
                 <p>Please send in your RSVP by the <strong>June 23rd.</strong></p>
 
-                <li><strong>What is the dress code for your wedding?</strong></li>
-                <p>We want this to be a fun and relaxed event. Please wear what you're confortable in. Please try to avoid red and gold colours as those will be the Bride's primary colours.</p>
+                <li><strong>What is the dress code for the wedding?</strong></li>
+                <p>We would like everyone to be comfortable. The dress code is smart casual, but we encourage you to wear cultural or traditional clothing if you would like to do so. We respectfully ask that women please avoid wearing a solid red sari, as this is what the Bride will be wearing.</p>
 
                 <li><strong>Is there parking available near the ceremony and reception venues?</strong></li>
-                <p>Yes there is parking available at the venue as well as many in the surrounding Cornwall Park area.</p>
+                <p>Yes, there is parking available at the venue as well as in the surrounding Cornwall Park area.</p>
 
-                <li><strong>Can I bring a plus one or children?</strong></li>
-                <p>Sure, please do! Just let us know in the RSVP.</p>
+                <li><strong>Can I bring a plus one?</strong></li>
+                <p>If you plan to bring a plus one who has not been included by name in the posted invitation, please let us know as soon as possible in your RSVP.</p>
+
+                <li><strong>Can I bring children?</strong></li>
+                <p>Children of all ages are welcome. However, please note that there will be no dedicated areas or entertainment for children during quite a long event, so we ask that you please bring along things to keep them occupied as they are likely to get bored!</p>
+
+                <li><strong>Can I find out who else has been invited so that I can coordinate transport or accommodation?</strong></li>
+                <p>Sure! Let us know in your RSVP if you would like the names of invitees known to you.</p>
 
                 <li><strong>Will the ceremony be taking place indoors or outdoors?</strong></li>
-                <p>We are planning to hold the ceremony in an uncovered inner garden of the venue.</p>
+                <p>Ideally, it will be taking place outdoors in an uncovered garden. August 31st is towards the end of winter in New Zealand, so we encourage you to bring warm outerwear. If the weather on the day is not suitable, there is an alternative indoor function room available.</p>
 
                 <li><strong>What type of food will be served?</strong></li>
-                <p>We are planning the catering to be indian and chinese themed, with vegetarian and gluten-free options.</p>
+                <p>We are planning to have a buffet-style variety of dishes including Indian and Chinese cuisine with vegetarian options.</p>
+                <li><strong>Can I bring a gift?</strong></li>
+                <p>We deeply appreciate the generosity but strongly prefer that no gifts were brought. Your presence and blessings on our special day are all we ask for.</p>
 
                 <li><strong>Is there someone I can contact if I have any other questions about the wedding?</strong></li>
                 <p>Feel free to email us at <a href="mailto:rsvp@jackyandsadhana.com?subject=Questions">rsvp@jackyandsadhana.com</a></p>
               </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="section" id="photos">
-      <div class="container">
-        <div class="columns">
-          <div class="column is-8-desktop is-offset-2-desktop">
-            <div class="content has-text-centered">
-              <h3 class="heading main-heading is-size-3">Photos of the Couple</h3>
             </div>
           </div>
         </div>
