--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 </div>
 
                 <div class="field">
-                  <label class="label">"Do you or your partner/family members have any dietary requirements or allergies?</label>
+                  <label class="label">Do you or your partner/family members have any dietary requirements or allergies?</label>
                   <div class="control">
                     <textarea class="textarea has-fixed-size" id="food" name="food"></textarea>
                   </div>
